--- a/public/cards.css
+++ b/public/cards.css
@@ -1,32 +1,107 @@
 #filter-main {
     width: 100vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+#button-work-inator {
+    display: flex;
+    justify-content: space-between;
 }
 
 #sidebar {
     background-color: rgb(78, 84, 111);
-    width: 500px;
+    width: 0px;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
 #filter {
-    background-color: antiquewhite;
     height: 500px;
-    width: 400px;
+    width: 390px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     position: sticky;
     top: 30%;
-
+    padding: 10px;
+    display: none;
 }
 
-main {
+#filter > h1 {
+    font-size: 28px;
+}
+
+#inputs {
+    height: 400px;
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#inputs > div {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 20px;
+}
+
+.in {
+    width: 250px
+}
+
+.wee {
+    background-color: rgb(99, 102, 127);
+    height: 30px;
+    width: 30px;
+    border: none;
+    position: sticky;
+    top: 55%;
+    left: 10px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.moved {
+    right: -10px;
+}
+
+@keyframes go-in {
+    from {width: 400px;}
+    to {width: 0px;}
+}
+.go-in {
+    animation-name: go-in;
+    animation-timing-function: ease-in;
+    animation-duration: .2s;
+    position: absolute;
+    left: 0px;
+}
+
+@keyframes go-out {
+    from {width: 0px;}
+    to {width: 400px;}
+}
+.go-out {
+    animation-name: go-out;
+    animation-timing-function: ease-out;
+    animation-duration: .2s;
+}
+
+/* CREDIT CARD DISPLAY */
+
+main {
+    width: 95%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-right: 20px;
 }
 
 .card-card {
@@ -70,10 +145,10 @@ h1 {
     font-weight: 600;
 }
 
-.more-btn {
+.steez {
     background-color: rgb(209, 76, 57);
     height: 30px;
-    width: 50px;
+    min-width: 50px;
     border-radius: 5px;
     border: none;
 }
@@ -82,12 +157,14 @@ h1 {
 
 .clicked {
     background-color: white;
-    width: 98%;
+    min-width: 81%;
     height: 550px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    padding-right: 10px;
+    padding-left: 10px;
     margin: 18px;
     position: relative;
     border-radius: 5px;
@@ -124,8 +201,12 @@ h1 {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 10px;
+    padding-left: 10px;
     box-sizing: border-box;
 }
+#cat-sec::-webkit-scrollbar {
+    display: none;
+  }
 
 .cat-card {
     background-color: rgb(240, 205, 123);
