--- a/public/cards.css
+++ b/public/cards.css
@@ -56,6 +56,8 @@
     width: 250px
 }
 
+/* SIDEBAR SETTINGS */
+
 .wee {
     background-color: rgb(99, 102, 127);
     height: 30px;
@@ -101,7 +103,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 
 .card-card {
@@ -135,22 +137,6 @@ main {
     width: 200px;
     display: flex;
     flex-direction: column;
-}
-
-h2 {
-    font-weight: 200;
-}
-
-h1 {
-    font-weight: 600;
-}
-
-.steez {
-    background-color: rgb(209, 76, 57);
-    height: 30px;
-    min-width: 50px;
-    border-radius: 5px;
-    border: none;
 }
 
 /* CLICKED MORE */
@@ -206,7 +192,7 @@ h1 {
 }
 #cat-sec::-webkit-scrollbar {
     display: none;
-  }
+}
 
 .cat-card {
     background-color: rgb(240, 205, 123);
