--- a/public/reset.css
+++ b/public/reset.css
@@ -57,6 +57,14 @@ body {
 	align-items: center;
 }
 
+h2 {
+    font-weight: 200;
+}
+
+h1 {
+    font-weight: 600;
+}
+
 header {
     background-color: rgb(145, 199, 246);
     width: 100vw;
@@ -88,10 +96,19 @@ nav {
 
 #logo {
     height: 95px;
+	margin-right: 5px;
 }
 
 .other {
 	color: rgb(78, 84, 111);
 	text-decoration: none;
 	font-size: 20px;
+}
+
+.steez {
+    background-color: rgb(209, 76, 57);
+    height: 30px;
+    min-width: 50px;
+    border-radius: 5px;
+    border: none;
 }
