--- a/public/profile.css
+++ b/public/profile.css
@@ -25,6 +25,7 @@ main {
     min-width: 75%;
     display: flex;
     flex-direction: column;
+    padding: 10px;
 }
 
 #have {
@@ -32,9 +33,12 @@ main {
     flex-wrap: wrap;
 }
 
-.have-card {
+#have > div {
+    height: 350px;
+}
+
+.pc-card {
     background-color: white;
-    height: 300px;
     width: 300px;
     border-radius: 5px;
     display: flex;
@@ -42,12 +46,20 @@ main {
     justify-content: space-evenly;
     align-items: center;
     margin: 18px;
+    position: relative;
 }
-.have-card:hover {
+.pc-card:hover {
     box-shadow: 5px 5px 10px rgb(60, 60, 60);
 }
 
-.have-img {
+.pc-card > button {
+    display: none;
+}
+.pc-card:hover > button {
+    display: block;
+}
+
+.pc-img {
     width: 250px;
     margin: 10px;
 }
@@ -59,7 +71,7 @@ main {
     align-items: center;
 }
 
-.have-card > div {
+.pc-card > div {
     width: 250px;
 }
 
@@ -82,5 +94,10 @@ span {
 /* WANTED CARDS */
 
 #want {
-    background-color: antiquewhite;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#want > div {
+    height: 250px;
 }
