--- a/public/reset.css
+++ b/public/reset.css
@@ -112,3 +112,15 @@ nav {
     border-radius: 5px;
     border: none;
 }
+
+.remove {
+    background-color: rgb(209, 76, 57);
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    border-radius: 20px;
+    border: none;
+    text-align: center;
+}
