--- a/public/reset.css
+++ b/public/reset.css
@@ -51,6 +51,7 @@ table {
 
 body {
     background-color: rgb(99, 102, 127);
+	height: 100vh;
 	font-family: 'Kanit', sans-serif;
 	display: flex;
 	flex-direction: column;
