--- a/public/profile.css
+++ b/public/profile.css
@@ -77,10 +77,17 @@ main {
     display: block;
 }
 
+.sup-bro {
+    min-height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+}
+
 .pc-img {
     max-height: 350px;
     width: 250px;
-    margin: 10px;
 }
 
 .title-info {
@@ -116,6 +123,23 @@ span {
     display: flex;
     align-items: center;
     font-weight: 200;
+}
+
+.inp-small {
+    width: 80px;
+}
+
+.inp-big {
+    width: 200px;
+}
+
+.span-ta {
+    margin-bottom: 5px;
+}
+
+.uses {
+    width: 200px;
+    margin-left: 5px;
 }
 
 .nums {
